feat(front/back): begin work on admin event page
